<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/info_checkin"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/textTitle"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/InpuTextFieldTheme"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/inputTextLayoutName"
        app:layout_constraintTop_toBottomOf="@id/inputTextLayoutName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            style="@style/InpuTextFieldTheme"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/bg_check_in"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/inputTextLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutEmail" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckIn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_check_in"
        android:text="@string/checkin"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/inputTextLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputTextLayoutEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>